Fixed bug #37276 (problems witch $_POST array)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_1@212341 c90b9560-bf6c-de11-be94-00142212c4b1